# faustSketchbook

./: .gitignore  compile-jsfx.sh  noiseFMPolysynth.dsp  noiseFMPolysynth.jsfx  utils.dsp
basicFMPolysynth/: CMakeLists.txt  basicFMPolysynth.dsp  basicFMPolysynth.jsfx  build_vst3.sh
basicFMPolysynth/basicFMPolysynth/: basicFMPolysynth.jucer
granularPolysynth/: CMakeLists.txt  build_vst3.sh  effect.dsp  granularPolysynth.dsp
granularPolysynth/granularPolysynth/: effect.h
granularPolysynth/juce/arch/: juce-plugin-soundbrowse.cpp
